Merge in README changes and git ignore from maven branch